# PadIndex

./: Benchmarks.cpp  Benchmarks.hpp  CMakeLists.txt  Db.cpp  Db.hpp  DbFileReader.hpp  Filters.cpp  Filters.hpp  Index.cpp  Index.hpp  LICENSE  PadIndex.cpp  PadIndex.sln  PadIndex.vcxproj  Timer.hpp  Utils.hpp  Win.hpp  dynamic_bitset.hpp
